--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   and my most recent position was as the lab manager of the UCLA Language Processing Lab. 
   I'm looking to transition from academia into the tech industry and technical writing. 
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: angelica-pan.github.io  # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://angelica-pan.com" # the base hostname & protocol for your site, e.g. http://example.com
 # repository: anpan/angelica-pan.github.io
 github_username:  angelica-pan
 
