--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Angelica Pan
 email: angelica.s.pan@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi! I'm Angelica. My background is in computational linguistics and psycholinguistics, 
-  and my most recent position was as the lab manager of the UCLA Language Processing Lab. 
-  I'm looking to transition from academia into the tech industry and technical writing. 
+  Hi! I'm Angelica. My background is in computational linguistics and psycholinguistics.
+  I also have experience in event planning and teaching, and my most recent position was 
+  as the lab manager of the UCLA Language Processing Lab. I'm looking to transition from 
+  academia into the tech industry and technical writing. 
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://angelica-pan.com" # the base hostname & protocol for your site, e.g. http://example.com
 # repository: anpan/angelica-pan.github.io
