--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   name: Angelica Pan
   image: '/assets/img/profile.png'
   job: Aspiring Technical Writer
-  bio: Hi! I'm Angelica. My background is in computational linguistics and psycholinguistics. I was most recently the lab manager of the UCLA Language Processing Lab. I'm looking to transition from academia into technical writing.
+  bio: Hi! I'm Angelica. My background is in computational linguistics and psycholinguistics, and I was most recently the lab manager of the UCLA Language Processing Lab. I'm looking to transition from academia into technical writing.
   email: angelica.s.pan@gmail.com
 
 # Contact links
