--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,34 @@
 title: Angelica Pan
-description: Technical Writer
+logo: logo.png
+description: Making technology easier to use, one word at a time.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://angelica-pan.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
 
 # Author Settings
 author:
   name: Angelica Pan
-  image: '/assets/img/profile.png'
-  # job: Technical Writer
-  bio: Technical Content Creator
-  email: angelica.s.pan@gmail.com
+  image: '/assets/img/profile.jpg'
+  job: Sr. Technical Writer at FreeWheel
+  bio: "As a technical writer, my goal is to turn complexity into clarity. I specialize in building thoughtful documentation that helps users find and understand what they need, faster."
 
 # Contact links
-# contact:
-#   - name: Twitter
-#     link: https://twitter.com/
-#   - name: Facebook
-#     link: https://facebook.com/
-#   - name: Instagram
-#     link: https://instagram.com/
+contact:
+  - name: Email
+    link: "mailto:angelica.s.pan@gmail.com"
+    icon: '/assets/svg/email.svg'
+  - name: LinkedIn
+    link: https://www.linkedin.com/in/angelica-pan-3aa302b0/
+    icon: '/assets/svg/linkedin.svg'
+
 
 # Comment Section (Disqus)
 # disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
 
+
 # Google Analytics
-# google-analytics: # add your identifier. For example UA-99631805-1.
+google-analytics: # add your identifier. For example UA-99631805-1.
+
 
 # Build settings
 markdown: kramdown
@@ -32,13 +36,27 @@ permalink: pretty
 plugins:
   - jekyll-sitemap
   - jekyll/tagging
-  
+
 # Pages Path
 defaults:
   - scope:
       path: '_pages'
     values:
       permalink: /:basename:output_ext
+  - scope:
+      path: ""
+      type: "portfolio"
+    values:
+      layout: "portfolio"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
 
 include:
   - _pages
@@ -57,6 +75,7 @@ tag_permalink_style:  pretty
 sass:
   sass_dir: _sass
   style: compressed
+
 
 # Exclude from processing.
 exclude:
